--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
             <div class="roadmap-timeline">
                 <div class="phase-card">
                     <div class="phase-header">
-                        <div class="phase-title">Phase 1</div>
-                        <div class="phase-period">Q1-Q2 2025</div>
+                        <div class="phase-title">Testing Phase</div>
+                        <div class="phase-period">1 Month Testing</div>
                     </div>
                     <h4>Quick Market Validation</h4>
-                    <div class="phase-countries">Countries: UAE, Mexico</div>
+                    <div class="phase-countries">Countries: UAE, Mexico Focused + All Regions</div>
                     <div class="phase-budget">Budget: 25%</div>
                     <ul class="phase-benefits">
                         <li>Fast implementation</li>
@@ -197,11 +197,11 @@
                 </div>
                 <div class="phase-card">
                     <div class="phase-header">
-                        <div class="phase-title">Phase 2</div>
-                        <div class="phase-period">Q3-Q4 2025</div>
+                        <div class="phase-title">Targeting Phase</div>
+                        <div class="phase-period">Month 2-3</div>
                     </div>
                     <h4>High-Value Market Entry</h4>
-                    <div class="phase-countries">Countries: India, Kenya</div>
+                    <div class="phase-countries">Countries: India, Kenya, UAE</div>
                     <div class="phase-budget">Budget: 40%</div>
                     <ul class="phase-benefits">
                         <li>Large market size</li>
@@ -211,11 +211,11 @@
                 </div>
                 <div class="phase-card">
                     <div class="phase-header">
-                        <div class="phase-title">Phase 3</div>
-                        <div class="phase-period">2026</div>
+                        <div class="phase-title">Scaling Phase</div>
+                        <div class="phase-period">After 4 Month</div>
                     </div>
                     <h4>Regional Consolidation</h4>
-                    <div class="phase-countries">Countries: Indonesia, Malaysia, Vietnam</div>
+                    <div class="phase-countries">Countries: Indonesia, Malaysia, UAE</div>
                     <div class="phase-budget">Budget: 35%</div>
                     <ul class="phase-benefits">
                         <li>ASEAN presence</li>
