Update Regional Comparison Table Feilds index.html
                <th>Regulations</th>
                <th>Market Trust</th>
                <th>Brand Awareness</th>

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                             <th>Priority Score</th>
                             <th>Internet Penetration</th>
                             <th>CAC ($)</th>
+                            <th>Regulations</th>
+                            <th>Market Trust</th>
+                            <th>Brand Awareness</th>
                         </tr>
                     </thead>
                     <tbody id="regionalTableBody">
