Update Regional Comparison index.html
<th>Avg CAC</th>
 <th>Competetion Level</th>
& Also add tier 3

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                         <option value="all">All Tiers</option>
                         <option value="Tier 1">Tier 1</option>
                         <option value="Tier 2">Tier 2</option>
+                        <option value="Tier 3">Tier 3</option>
                     </select>
                 </div>
                 <div class="filter-group">
@@ -132,6 +133,8 @@
                                 <th>Entry Difficulty</th>
                                 <th>Time to Market</th>
                                 <th>Region</th>
+                                <th>Avg CAC</th>
+                                <th>Competetion Level</th>
                             </tr>
                         </thead>
                         <tbody id="countriesTableBody">
